--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
 <!-- 📊 Grafikler -->
 <div class="charts-container">
   <div class="chart-card">
-    <h3>Pasta Grafik</h3>
+    <h3>Pasta Grafikkk</h3>
     <canvas baseChart
       [data]="pieChartData1"
       [options]="pieChartOptions1"
